@@ -5,6 +5,7 @@ package com.my.salty_date.service;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 @Service
@@ -17,7 +18,7 @@ public class PaginationService {
         int startNum = Math.max(currentPageNum - (BAR_LENGTH/2),0);
         int endNum = Math.min(startNum + BAR_LENGTH,totalPages);
 
-        return IntStream.range(startNum,endNum).boxed().toList();
+        return IntStream.range(startNum,endNum).boxed().collect(Collectors.toList());
     }
 
     public int currentBarLength(){
